<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">goCamm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Cropping</string>
    <string name="done">Save</string>
    <string name="crop">Crop</string>
    <string name="tools">Tools</string>
    <string name="scan">Next</string>
    <string name="cantCrop">Can\'t crop the image, change the points</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="applying_filter">Applying filter</string>
    <string name="low_memory">Low Memory</string>
    <string name="low_memory_message">Your phone is low on memory, you may feel some lags while editing images.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="retake">Retake</string>
    <string name="original">Original</string>
    <string name="magic_color">Magic color</string>
    <string name="gray_mode">Gray Mode</string>
    <string name="b_and_w">B/W</string>
    <string name="brightness">Brightness</string>
    <string name="rotate">Rotate</string>
    <string name="mask">Mask Aadhaar</string>
    <string name="save">Save</string>
    <string name="preview">Preview</string>
    <string name="next">Next</string>



    <string name="exit_msg">Do you want to exit ?</string>
    <string name="manual_mask">Do you want to continue with manual masking ?</string>
    <string name="error_back">Forced back pressed !</string>
    <string name="image_path_error">Image path not found</string>
    <string name="pdf_path_error">PDF path not found</string>
    <string name="file_type_error">File type not found</string>
    <string name="image_count_error">IMAGE Count not Found</string>
    <string name="image_name_error">Image Name not found</string>
    <string name="pdf_name_error">PDF Name not found</string>
    <string name="image_masking">IMAGE Masking is not done for more than one image</string>
    <string name="grant_permission">Please Grant Permissions</string>


    <string name="gpsmsg">Enable your GPS</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>

    <string name="aadhaar_message">Please use original Aadhaar Card.\nDo not use Smart Card, PVC Card &amp; Xerox</string>
    <string name="guideline_message">Please Capture within the boundaries</string>
    <string name="no_location">Location not found do you want to continue?</string>

    <string name="video_error">Video recording failed</string>

    <string name="something_went_wrong">Something Went Wrong</string>

</resources>
